<resources>
    <string name="app_name">NBA Test</string>
    <string name="intro">Test your NBA knowledge with the following quiz</string>
    <string name="name">Name the most popular mobile operating system: </string>
    <string name="q1">1. What is the name of big star the basketball player with 23 numbe on the t-shirt ?</string>
    <string name="q1a1" translatable="false">Kyrie Irving</string>
    <string name="q1a2" translatable="false">LeBron James</string>
    <string name="q1a3" translatable="false">Michael Jordan</string>
    <string name="q2">2. Who in 2013 year win the NBA Finals?</string>
    <string name="q2a1" translatable="false">Miami Heat</string>
    <string name="q2a2" translatable="false">Chicago Bulls</string>
    <string name="q2a3" translatable="false">Cleveland Cavaliers</string>
    <string name="q3">3. Where now the LeBron James playing?</string>
    <string name="q3a1" translatable="false">Miami Heat</string>
    <string name="q3a2" translatable="false">Washington Wizzard</string>
    <string name="q3a3" translatable="false">Cleveland Cavaliers</string>
    <string name="q4">4. Indicate the teams in which he played Kevin Garnett.</string>
    <string name="q4a1">Minnesota Timberwolves</string>
    <string name="q4a2">Boston Celtics</string>
    <string name="q4a3">Brooklyn Nets</string>
    <string name="q5">5. What is the lowest NBA basketball player?</string>
    <string name="q5a1" translatable="false">Don Martin</string>
    <string name="q5a2" translatable="false">Tyrone "Muggsy" Bogues</string>
    <string name="q5a3" translatable="false">Greg Grant</string>
    <string name="q6">6. Which NBA club won the most championships (17)?</string>
    <string name="q6a1" translatable="false">Boston Celtcis</string>
    <string name="q6a2" translatable="false">Los Angeles Lakers</string>
    <string name="q6a3" translatable="false">Utah Jazz</string>
    <string name="q7">7. Which of these basketball players played in the Chicago Bulls?</string>
    <string name="q7a1">Michael Jordan</string>
    <string name="q7a2" translatable="false">Derrick Rose</string>
    <string name="q7a3">Rajon Rondo</string>
    <string name="q8">8. How many centimeters of jump had Michael Jordan in peak form?</string>
    <string name="q8a1" translatable="false">50 cm</string>
    <string name="q8a2" translatable="false">120 cm</string>
    <string name="q8a3" translatable="false">90 cm</string>
    <string name="results">Results</string>
    <string name="hey" translatable="false">Hey \u0020</string>
    <string name="you">! You got \u0020</string>
    <string name="points">\u0020 points out of 9!</string>
</resources>
